theme12/theme12.css
/* #region GENERAL STYLES */
/* #region Scroll bar */
* {
	scrollbar-color: var(--text) var(--bg-pg);
	scrollbar-width: thin;
	background-position: center;
}
::-webkit-scrollbar {
	width: 0.5em;
	height: 0.5em;
	background-color: var(--bg-pg);
}
::-webkit-scrollbar-corner { background-color: var(--text) }
::-webkit-scrollbar-thumb { background-color: var(--text) }
/* #endregion */
html {
	background-color: var(--bg-pg);
	color: var(--text);
	font-family: var(--bfont);
	height: 100%;
}
a {
	color: var(--text);
	transition: color .2s;
	text-underline-offset: 0.2em;
}
a:hover, a:focus { color: var(--accent) }
/* Accessibility */
#skip, #hiddentitle, #search label {
	position: fixed;
	font-size: 1px;
	top: -100rem;
}
/* Tooltips */
#s-m-t-tooltip {
	margin: 1em;
	padding: 0.25em 0.5em;
}
/* Roundness */
#avatar.square, #search button {
	border-radius: var(--roundness)
}
/* #endregion */



/* #region PAGE LAYOUT */
body {
	display: grid;
	--navbar-size: 3.5em;
	min-height: 100%;
}
body:not(.ntop) { grid-template-rows: auto 1fr auto }
body.ntop { grid-template-rows: auto auto 1fr auto }
body.nleft { margin-left: var(--navbar-size) }
body.nright { margin-right: var(--navbar-size) }
/* #region Banner */
#banner {
	position: relative;
	display: flex;
}
#banner img {
	max-height: 25em;
	width: 100%;
}
#banner span {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 3em;
	color: var(--text-h);
}
#banner span.bg { background: rgba(var(--bg--rgb), 0.5) }
html:not(.alt) #banner .alt, html.alt #banner .og { display: none }
/* #endregion */
/* Footer */
#footer {
	padding: 1em;
	display: flex;
	flex-flow: row wrap;
	gap: 0.5em 2em;
	justify-content: center;
}
/* #endregion */



/* #region NAVBAR */
#navbar {
	display: flex;
	justify-content: space-between;
	align-items: center;
	background-color: var(--bg);
	padding-inline: 1em;
	z-index: 5;
}
body.ntop #navbar {
	position: sticky;
	top: 0;
	width: 100vw;
	height: var(--navbar-size);
}
body:not(.ntop) #navbar {
	position: fixed;
}
body.nleft #navbar {
	bottom: 0;
	left: var(--navbar-size);
	width: 100vh;
	height: var(--navbar-size);
	transform: rotate(-90deg);
	transform-origin: bottom left;
}
body.nright #navbar {
	right: 0;
	height: 100vh;
	width: var(--navbar-size);
	writing-mode: vertical-lr;
	flex-direction: row-reverse;
}
#avnm {
	display: flex;
	align-items: center;
	gap: 0.5em;
	text-decoration: none;
}
body.nright #avnm { flex-direction: row-reverse }
#avatar {
	--size: 2.5em;
	height: var(--size);
	width: var(--size);
}
body.nleft #avatar { transform: rotate(90deg) }
#name, #blognav a {
	text-transform: uppercase;
	letter-spacing: 0.1em;
	cursor: pointer;
	padding-block: 0.75em;
	text-decoration: none;
}
/* Blog navigation */
#blognav {
	display: flex;
	gap: 0.5em;
}
body:not(.nright) #scrolltotop_parent { order: -1 }
body.nright #scrolltotop_parent { order: 1 }
.tmblr-iframe--unified-controls {
	transform: scale(0.75);
	transform-origin: top right;
}
body.ntop .tmblr-iframe--unified-controls { margin-top: var(--navbar-size) }
body.nright .tmblr-iframe--unified-controls { margin-right: var(--navbar-size) }
/* #endregion */



/* #region CENTER - GENERAL AND SEARCH */
#center {
	position: relative;
	background: var(--bg-img) var(--bg-position) var(--bg-repeat);
	background-size: var(--bg-size);
	background-attachment: var(--bg-attachment);
	display: grid;
}
/* #region Search form */
body:not(.showsearch) #search { opacity: 0; pointer-events: none }
#search {
	transition: opacity .2s;
	z-index: 4;
}
body.showsearch { overflow: hidden }
#search { position: fixed }
body.nleft #search {
	width: calc(100% - var(--navbar-size));
	height: 100%;
	top: 0;
	left: var(--navbar-size);
}
body.nright #search {
	width: calc(100% - var(--navbar-size));
	height: 100%;
	top: 0;
	left: 0;
}
body.ntop #search {
	width: 100%;
	height: calc(100% - var(--navbar-size));
	top: var(--navbar-size);
	left: 0;
}
#back {
	background-color: var(--bg-pg);
	opacity: 0.75;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
#search form {
	position: absolute;
	top: 50%;
	background-color: var(--bg);
	padding: 1em;
	display: flex;
	gap: 0.5em;
	text-align: center;
}
body.nleft #search form {
	left: 50%;
	transform: translate(-50%, -50%);
}
body.nright #search form {
	right: 50%;
	transform: translate(50%, -50%);
}
body.ntop #search form {
	left: 50%;
	transform: translate(-50%, -50%);
}
#search input {
	background-color: unset;
	color: var(--text);
	border: none;
	border-bottom: 0.1em solid;
	transition: opacity .2s;
	text-align: center;
	padding: 0.25em 0.5em;
}
#search input:placeholder-shown:not(:focus) { opacity: 0.25 }
#search input:placeholder-shown:not(:focus):hover { opacity: 0.5 }
#search button {
	background: none;
	border: none;
	text-transform: uppercase;
	letter-spacing: 0.1em;
	color: var(--text);
	cursor: pointer;
	padding: 0.25em 0.5em;
	transition: color .2s;
}
#search button:hover, #search button:focus { color: var(--accent) }
/* #endregion */
/* #endregion */



/* #region SIDEBAR */
#sidebar {
	display: flex;
	flex-direction: column;
	max-width: 25em;
	text-align: justify;
}
#sidebar > * { margin-block: 0.3rem }
#sidebar > :first-child { margin-block-start: 0 }
#sidebar > :last-child { margin-block-end: 0 }
/* Sidebar images */
#sidebarimg {
	position: relative;
	display: flex;
	overflow: hidden;
}
html:not(.alt) #sidebarimg.oggrad::after,
html.alt #sidebarimg.altgrad::after {
	content: "";
	background: linear-gradient(transparent 70%, var(--bg-pg) 98%);
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: block;
}
html:not(.alt) #sidebarimg img.alt, html.alt #sidebarimg img.og { display: none }
/* Title */
#title {
	font-family: var(--tfont);
	font-weight: var(--tweight);
	text-transform: uppercase;
	font-weight: bold;
	font-size: 4em;
	line-height: 1;
}
/* Links and pagination */
#pages, #pagination {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-between;
	text-transform: uppercase;
	letter-spacing: 0.1em;
	text-align: center;
	gap: 0.25em;
	
}
#pages a, #pagination a { text-decoration: none }
/* #endregion */



/* #region POSTS */
#main {
	max-width: var(--post-width);
}
/* #endregion */



/* #region POST TYPES */
/* #endregion */



/* #region RESPONSIVENESS */
@media (min-width: 60rem) { /* Desktop sizing */
	#center {
		grid-template-columns: auto auto;
		gap: 5%;
		padding: 2em;
	}
	#sidebar {
		position: sticky;
		bottom: 2em;
		align-self: end;
		justify-content: end;
		justify-self: start;
		max-height: calc(100vh - 4em);
	}
	body.ntop #sidebar { max-height: calc(100vh - 4em - var(--navbar-size)) }
	#main { justify-self: end }
}
@media (max-width: 60rem) { /* Mobile sizing */
	#center {
		justify-items: center;
		padding: 5%;
	}
	#sidebar { grid-row: 1 }
}
/* #endregion */

